// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityStartDiscussionComponent should set radialCounterClass to radial-counter-danger radial-counter-pulse when inputTextLength >= DangerStartNumber  1`] = `
<pf-radial-text-counter
  DangerStartNumber={[Function Number]}
  WarningStartNumber={[Function Number]}
  charactersRemaining={[Function Number]}
  radialCounterClass={[Function String]}
  radialIncrementValue={[Function Number]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
  textMaxLength={[Function Number]}
>
  <div
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="20"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-danger radial-counter-pulse"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
        style="stroke-dashoffset: 49.8131105;"
      />
    </svg>
  </div>
</pf-radial-text-counter>
`;

exports[`CommunityStartDiscussionComponent should set radialCounterClass to radial-counter-warn radial-counter-pulse when inputTextLength >= WarningStartNumber  1`] = `
<pf-radial-text-counter
  DangerStartNumber={[Function Number]}
  WarningStartNumber={[Function Number]}
  charactersRemaining={[Function Number]}
  radialCounterClass={[Function String]}
  radialIncrementValue={[Function Number]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
  textMaxLength={[Function Number]}
>
  <div
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="20"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-warn radial-counter-pulse"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
        style="stroke-dashoffset: 49.8131105;"
      />
    </svg>
  </div>
</pf-radial-text-counter>
`;

exports[`CommunityStartDiscussionComponent should show radial text counter 1`] = `
<pf-radial-text-counter
  DangerStartNumber={[Function Number]}
  WarningStartNumber={[Function Number]}
  charactersRemaining={[Function Number]}
  radialCounterClass={[Function String]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
  textMaxLength={[Function Number]}
>
  <div
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="20"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-safe"
        cx="50%"
        cy="50%"
        fill="none"
        r="8"
        stroke-width="2"
        style="stroke-dashoffset: 50.2655;"
      />
    </svg>
  </div>
</pf-radial-text-counter>
`;
